# django-vectortiles

./: .coveragerc  .env.dist  .flake8  .gitignore  .travis.yml  CHANGES.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  python-lint.yml  python-publish.yml  python-test.yml
doc/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/: .readthedocs.yaml  changelog.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
test_vectortiles/: settings.py  urls.py  wsgi.py
test_vectortiles/management/commands/: load_data.py
test_vectortiles/settings/: __init__.py  dev.py
test_vectortiles/test_app/: admin.py  functions.py  models.py  views.py  vt_layers.py
test_vectortiles/test_app/management/commands/: load_data.py
test_vectortiles/test_app/migrations/: 0001_initial.py  0002_auto_20201020_1615.py  0003_feature_date.py  0004_alter_feature_layer.py  0005_alter_feature_date.py  0006_auto_20230209_0933.py  0007_fulldatafeature_fulldatalayer.py  0008_alter_fulldatafeature_properties.py  0009_alter_fulldatalayer_options.py  0010_fulldatafeature_feature_properties_gin.py  0011_fulldatalayer_include_in_tilejson.py  0012_fulldatalayer_update_datetime.py  0013_alter_fulldatalayer_update_datetime.py  0014_fulldatafeature_properties_nature.py  0015_alter_feature_id_alter_fulldatafeature_id_and_more.py
test_vectortiles/test_app/templates/: index.html
vectortiles/: VERSION.md  __init__.py  mixins.py  settings.py  views.py
vectortiles/backends/: __init__.py
vectortiles/backends/postgis/: __init__.py  functions.py
vectortiles/backends/python/: __init__.py
vectortiles/mapbox/: mixins.py  views.py
vectortiles/postgis/: functions.py  mixins.py  views.py
vectortiles/rest_framework/: renderers.py  views.py
vectortiles/tests/: test_functions.py  test_mixins.py  test_views.py
