[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vectortiles",]
exclude = [
    "test_vectortiles/",
    "**/tests",
    "**/dev.py",
]
[tool.hatch.build.targets.sdist]
packages = ["vectortiles",]
exclude = [
    "/vectortiles/tests",
    "/test_vectortiles",
]

[project]
version = "0.1.0"
name = "django-vectortiles"
description = "Generate vector tiles from DeoDjango models"
authors = [
  {name = "Jean-Etienne CASTAGNEDE", email = "j.e.castagnede@gmail.com"},
]
maintainers = [
  {name = "Jean-Etienne CASTAGNEDE", email = "j.e.castagnede@gmail.com"}
]
dependencies = [
    "django",
    "mercantile",
]

[project.optional-dependencies]
dev = [
    "factory-boy",
    "flake8",
    "isort",
    "black",
    "coverage",
    "djangorestframework",
    "mapbox_vector_tile",
    "psycopg2-binary",
    "django-debug-toolbar",
    "sphinx-rtd-theme"
]
test = [
    "factory-boy",
    "flake8",
    "isort",
    "black",
    "coverage",
    "djangorestframework",
    "psycopg2-binary",
    "mapbox_vector_tile"
]
python = [
    "mapbox_vector_tile"
]

[tool.coverage.run]
source = [
    "vectortiles"
]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/settings/*",
    "*/test_runner.py",
    "*/test_global.py",
    "wsgi.py",
    "asgi.py",
]
data_file = ".coverage"

[tool.coverage.report]
ignore_errors = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "**/settings/dev.py"
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py39"

[tool.ruff.lint]

select = ["G", "INT", "E4", "E7", "E9", "F", "DJ", "LOG", "UP", "I", "T10", "EM", "T201"]
ignore = []


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
